--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "sber_bulb_api"
 version = "0.0.1"
-description = "API wrapper for controlling the Sber smart bulb (Tuya smart bulb A60)."
+description = "API wrapper for controlling the Sber smart bulb A60."
 authors = [
     { name = "regenara", email = "jakebv.22@gmail.com" }
 ]
@@ -11,6 +11,11 @@ dependencies = [
     "pydantic>=2.0.0,<3.0.0",
     "aiohttp>=3.0.0,<4.0.0"
 ]
+dynamic = ["readme"]
+
+[project.urls]
+repository = "https://github.com/regenara/sber_bulb_api"
+homepage = "https://github.com/regenara/sber_bulb_api"
 
 [build-system]
 requires = ["setuptools", "wheel"]
